# csvhero

./: .gitignore  README.md  pyproject.toml
src/csvhero/: cli.py  core.py  templates.py
