[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csvhero"
version = "1.0.1"
description = "A tiny, beautiful CLI that writes shape readmes for your CSV files."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "You" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7"
]

[project.scripts]
csvhero = "csvhero.cli:app"

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM"]
